--- a/ThrustExpo/ThrustExpo.css
+++ b/ThrustExpo/ThrustExpo.css
@@ -35,6 +35,7 @@ img.tooltip-trigger {
     flex-direction: column;
     align-items: left;
     width: 100%;
+    max-width: 1200px;
 }
 
 .logo-row {
@@ -53,6 +54,7 @@ img.tooltip-trigger {
     flex-direction: column;
     align-items: left;
     width: 100%;
+    max-width: 1200px;
 }
 
 .param-controls {
@@ -95,34 +97,19 @@ img.tooltip-trigger {
     margin-right: 5px;
 }
 
-.plots-container {
-    display: flex;
-    flex-direction: row;
-    gap: 0px;
-    flex-wrap: wrap;
-    justify-content: left;
-    margin-bottom: 20px;
-}
-
 .modebar-container {
-    right: 165px !important;
-}
-
-.thrust-plot-container {
-    position: relative;
-    margin-bottom: 10px;
-    max-width: 100%;
+    right: 170px !important;
 }
 
 .thrust-plot {
-    width: 744px;
+    width: 100%;
+    max-width: 1200px;
     height: 450px;
-    display: none;
 }
 
 #app-description {
     width: 100%;
-    max-width: 600px;
+    max-width: 800px;
     text-align: justify;
     padding: 20px 0px;
 }
@@ -131,7 +118,8 @@ img.tooltip-trigger {
     font-family: sans-serif;
     font-size: 0.8rem;
     width: 100%;
-    max-width: 480px;
+    max-width: 570px;
+    margin-left: 3px;
 }
 
 #hover-thrust-estimate {
