--- a/ThrustExpo/ThrustExpo.css
+++ b/ThrustExpo/ThrustExpo.css
@@ -9,7 +9,8 @@ h1 a {
 
 fieldset {
     width: 100%;
-    width: 550px;
+    max-width: 550px;
+    height: 130px;
     font-family: sans-serif;
     font-size: 0.8rem;
     padding-top: 10px;
@@ -71,7 +72,6 @@ img.tooltip-trigger {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 3rem;
-    padding-top: 10px;
 }
 
 .param-column {
